# Transit_Ops

./: .gitignore  DESIGN.md  README.md  TransitOps_SRS_v1.1 (1).md  pyproject.toml
Backend/app/: api.py  (+2 more)
backend/: alembic.ini  check_db.py  docker-compose.yml  pyproject.toml  requirements.txt  reset_db.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_users_roles.py  0002_vehicles_drivers.py  0003_triggers.py  0004_be2_trip_maintenance.py  0004_seed_admin.py  0005_be2_fuel_expenses.py  0005_seed_demo_users.py  0006_be2_mv_vehicle_costs.py  0006_rehash_seeded_passwords.py  5540a2390864_create_audit_logs.py  a7dfb727d19b_merge_be1_and_be2_database_branches.py
backend/app/: main.py
backend/app/auth/: dependencies.py  models.py  router.py  schemas.py  security.py
backend/app/core/: audit.py  config.py  db.py  exceptions.py
backend/app/modules/costs/: models.py  router.py  schemas.py  service.py
backend/app/modules/dashboard/: router.py
backend/app/modules/drivers/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/exports/: router.py
backend/app/modules/maintenance/: models.py  router.py  schemas.py  service.py
backend/app/modules/reports/: analytics.py  router.py  service.py  tasks.py
backend/app/modules/trips/: models.py  router.py  schemas.py  service.py
backend/app/modules/users/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/vehicles/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/scripts/: seed_roles.py
backend/app/shared/: enums.py  exceptions.py  models.py
backend/tests/: conftest.py  test_audit.py  test_auth.py  test_drivers_async.py  test_health.py  test_maintenance_service_async.py  test_ops_models.py  test_ops_rules.py  test_rbac.py  test_security_headers.py  test_vehicles_async.py
frontend/: eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json
(+46 files in other folders)
