[project]
name = "transitops"
version = "0.1.0"
description = "TransitOps backend scaffold"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.35",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.1",
  "asyncpg>=0.29.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[tool.setuptools]
packages = ["app", "app.auth", "app.core", "app.modules", "app.modules.drivers", "app.modules.vehicles", "app.shared"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
