[project]
name = "transitops"
version = "0.1.0"
description = "TransitOps backend scaffold"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.35",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.1",
  "asyncpg>=0.29.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "pydantic[email]>=2.9.0",
  "httpx>=0.27.0",
  "bcrypt>=4.0.0",
  "python-jose[cryptography]>=3.3.0",
  "slowapi>=0.1.9",
  "weasyprint>=57.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "aiosqlite>=0.20.0"]

[tool.setuptools]
packages = [
  "app",
  "app.auth",
  "app.core",
  "app.shared",
  "app.scripts",
  "app.modules",
  "app.modules.vehicles",
  "app.modules.drivers",
  "app.modules.trips",
  "app.modules.maintenance",
  "app.modules.costs",
  "app.modules.reports",
  "app.modules.dashboard",
  "app.modules.exports",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
